2024-01-31T16:01:31Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7728841838 # 74
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-31
* notice: last 14d: unq all: 72 164
* notice: prev accum: outdated-unq outdated-all / unq all: 1621 3638 / 1727 3801
* notice: next accum: outdated-unq outdated-all / unq all: 1621 3638 / 1727 3802
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-01-31]

2024-01-31T08:06:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7722963069 # 73
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-31
* notice: last 14d: unq all: 72 163
* notice: prev accum: outdated-unq outdated-all / unq all: 1620 3637 / 1726 3800
* notice: next accum: outdated-unq outdated-all / unq all: 1621 3638 / 1727 3801
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-01-17] / [2024-01-31]

2024-01-30T16:01:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7713942516 # 71
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-30
* notice: last 14d: unq all: 73 163
* notice: prev accum: outdated-unq outdated-all / unq all: 1620 3637 / 1726 3799
* notice: next accum: outdated-unq outdated-all / unq all: 1620 3637 / 1726 3800
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-01-30]

2024-01-30T08:07:16Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7708058394 # 70