@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-01-31T16:01:31Z",
+  "timestamp" : "2024-02-01T08:07:08Z",
   "count_outdated" : 3638,
   "uniques_outdated" : 1621,
-  "count" : 3802,
-  "uniques" : 1727,
+  "count" : 3803,
+  "uniques" : 1728,
   "clones" : [
     {
       "timestamp": "2024-01-18T00:00:00Z",
-      "count": 28,
+      "count": 27,
       "count_minmax": [ 1, 28 ],
-      "count_decinc": [ 0, 28 ],
+      "count_decinc": [ 1, 28 ],
       "uniques": 18,
       "uniques_minmax": [ 1, 18 ],
       "uniques_decinc": [ 0, 18 ]
@@ -127,6 +127,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-02-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
