@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2024-01-18T00:00:00Z",
-      "count": 28,
+      "count": 27,
       "uniques": 18
     },
     {
@@ -70,6 +70,11 @@
     {
       "timestamp": "2024-01-31T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-02-01T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
